# gl

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml
src/: branch.rs  cli.rs  commit.rs  commitcount.rs  config.rs  contributions.rs  count.rs  date.rs  dates.rs  display.rs  env.rs  hash.rs  identity.rs  languages.rs  log.rs  main.rs  opts.rs  origin.rs  quote.rs  repo.rs  status.rs  tag.rs  version.rs
