[package]
name = "gl"
version = "2.5.3"
authors = ["Jake W. Ireland <jakewilliami@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["cargo", "wrap_help", "derive"] }
colored = "2.1.0"
colorsys = "0.6.7"
hyperpolyglot = "0.1.7"
json = "0.12.4"
lazy_static = "1.5.0"
regex = "1.10.4"
rgb = "0.8.50"
strip-ansi-escapes = "0.2.0"
tabular = "0.2.0"
termsize = "0.1.9"
textplots = "0.8.6"

