[package]
name = "gl"
version = "3.6.5"
authors = ["Jake W. Ireland <jakewilliami@icloud.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.103"
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["cargo", "wrap_help", "derive"] }
colored = "2.1.0"
colorsys = "0.6.7"
dialoguer = "0.12.0"
hyperpolyglot = "0.1.7"
itertools = "0.15.0"
json = "0.12.4"
lenient_semver = { version = "0.4.2", features = [ "version_semver" ] }
open = "5.3.6"
regex = "1.11.0"
rgb = "0.8.50"
semver = "1.0.28"
strip-ansi-escapes = "0.2.0"
tabular = "0.2.0"
termsize = "0.1.9"
textplots = "0.8.6"

